package officehours.navdb;

public class AirportService {

    private String name;
    private String description;

    /**
     * Default constructor
     */
    public AirportService() {
        
    }
    
    /**
     * @param name
     * @param description
     */
    public AirportService(String name, String description) {
        super();
        this.name = name;
        this.description = description;
    }

    /**
     * @return the name
     */
    public String getName() {
        return name;
    }

    /**
     * @param name the name to set
     */
    public void setName(String name) {
        this.name = name;
    }

    /**
     * @return the description
     */
    public String getDescription() {
        return description;
    }

    /**
     * @param description the description to set
     */
    public void setDescription(String description) {
        this.description = description;
    }
    
    

}