package officehours.navdb;

public enum CommunicationType {
    TWR,
    WX,
    GND,
    APPR,
    DEPART,
    EMERG;
}


