package officehours.navdb;

public enum RunwaySurface {
    ASP, BIT, CLA, CON, GRS,
    GVL, ICE, PER, SAN, U;
}